--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav__logo">Kid-Gineers STEM education agency</a>
+                <a href="https://kidgineers.github.io/mainpage/" class="nav__logo">Kid-Gineers STEM education agency</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
