--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
 
         <!--========== SCROLL TOP ==========-->
-        <a href="#" class="scrolltop" id="scroll-top">
+        <a href="https://kidgineers.github.io/mainpage/" class="scrolltop" id="scroll-top">
             <i class='bx bx-chevron-up scrolltop__icon'></i>
         </a>
 
@@ -26,7 +26,7 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
+                        <li class="nav__item"><a href="https://kidgineers.github.io/mainpage/" class="nav__link active-link">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                         <li class="nav__item"><a href="#menu" class="nav__link">Courses</a></li>
