--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
 
         <!--========== SCROLL TOP ==========-->
-        <a href="https://kidgineers.github.io/mainpage/" class="scrolltop" id="scroll-top">
+        <a href="#" class="scrolltop" id="scroll-top">
             <i class='bx bx-chevron-up scrolltop__icon'></i>
         </a>
 
@@ -32,7 +32,7 @@
                         <li class="nav__item"><a href="https://kidgineers.github.io/mainpage/" class="nav__link">Services</a></li>
                         <li class="nav__item"><a href="https://kidgineers.github.io/mainpage/" class="nav__link">Courses</a></li>
                         <li class="nav__item"><a href="https://kidgineers.github.io/pricing/" class="nav__link">Pricing</a></li>
-                        <li class="nav__item"><a href="https://kidgineers.github.io/mainpage/" class="nav__link">Contact us</a></li>
+                        <li class="nav__item"><a href="https://forms.gle/qxF67BNgUmypjZB3A" class="nav__link">Contact us</a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
@@ -90,7 +90,7 @@
         <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo">Kid-Gineers</a>
+                    <a href="https://kidgineers.github.io/mainpage/" class="footer__logo">Kid-Gineers</a>
                     <span class="footer__description">STEM-powering youth</span>
                     <div>
                         <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
