--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
                     </div>
                 </div>
             </section>
+            <section class="contact section bd-container">
+                <div class="contact__container bd-grid">
+                    <div class="contact__data">
+                        <h2 class="section-title contact__initial">Apply And Get Started Today!</h2>
+                    </div>
+
+                    <div class="contact__button">
+                        <a href="https://forms.gle/qxF67BNgUmypjZB3A" class="button">Go To Form</a>
+                    </div>
+                </div>
+            </section>
 
         <!--========== FOOTER ==========-->
         <footer class="footer section bd-container">
